<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="contratos">Contratos</string>
    <string name="logout">Logout</string>
    <string name="propietario">Propietario</string>
    <string name="inmobiliaria_la_punta">Inmobiliaria La Punta</string>
    <string name="logo">Logo</string>
    <string name="usuario">Usuario</string>
    <string name="login">LOGIN</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="imagenes">Imagenes</string>
    <string name="configuracion">Configuracion</string>
    <string name="c_digo">Código</string>
    <string name="dni">DNI</string>
    <string name="editar">EDITAR</string>
    <string name="e_mail">E-mail</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="tel_fono">Teléfono</string>
    <string name="cambiar_contrase_a">CAMBIAR CONTRASEÑA</string>
    <string name="guardar">GUARDAR</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="foto_del_inmueble">Foto del inmueble</string>
    <string name="direcci_n">Dirección</string>
    <string name="precio">Precio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_inmueble">Agregar inmueble</string>
    <string name="nuevo_inmueble">Nuevo inmueble</string>
    <string name="ambientes">Ambientes</string>
    <string name="tipo">Tipo</string>
    <string name="superficie_m">Superficie (m²)</string>
    <string name="valor">Valor</string>
    <string-array name="opciones_uso">
        <item>Residencial</item>
        <item>Comercial</item>
        <item>Industrial</item>
    </string-array>
    <string-array name="opciones_tipo">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Local Comercial</item>
        <item>Oficina</item>
        <item>Galpón</item>
        <item>Terreno</item>
    </string-array>
    <style name="SpinnerTheme" parent="Theme.AppCompat.Light">
        <item name="colorControlNormal">#9C27B0</item>
        <item name="android:textColorPrimary">#333333</item>
        <item name="android:textColor">#333333</item>
    </style>
</resources>